# TTC-C

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  tensor_doc.config
doc/html/: .gitignore
include/: CMakeLists.txt  tensor_tc.h  tensor_tc_util.h  tensor_util.h  ttc_c.h  ttc_c_util.h
src/: CMakeLists.txt  tensor_tc.c  tensor_tc_util.c  tensor_util.c  ttc_c.c  ttc_c_util.c
test/: CMakeLists.txt  avx512-test.c  boundary-test.c  cuda-test.c  jit-test.c  knc-test.c  test-util.c  test-util.h
